Fix problems with layout on mobile devices

--- a/content/css/golden-layout/goldenlayout-base.css
+++ b/content/css/golden-layout/goldenlayout-base.css
@@ -130,6 +130,7 @@
   text-overflow: ellipsis;
   display: inline-block;
   overflow: hidden;
+  user-select: none;
 }
 
 .lm_header .lm_tab .lm_close_tab {
